After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 756575 - The link text of Support field in detail view is not clickable
The link text of Support field in detail view is not clickable
Status: RESOLVED FIXED
Product: gnome-logs
Classification: Other
Component: general
git master
Other Linux
: Normal normal
: ---
Assigned To: gnome-logs maintainer(s)
gnome-logs maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2015-10-14 14:55 UTC by Jonathan Kang
Modified: 2015-10-14 15:27 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (2.43 KB, patch)
2015-10-14 15:00 UTC, Jonathan Kang
committed Details | Review

Description Jonathan Kang 2015-10-14 14:55:33 UTC
The link text of Support field in detail view should be clickable, so the user can click it directly to open the link.
Comment 1 Jonathan Kang 2015-10-14 15:00:53 UTC
Created attachment 313274 [details] [review]
patch

patch to fix it
Comment 2 David King 2015-10-14 15:04:48 UTC
Review of attachment 313274 [details] [review]:

Looks good to me. Could even go on the gnome-3-18 branch, as well as master.
Comment 3 Jonathan Kang 2015-10-14 15:26:34 UTC
Pushed to master as commit 7de0c549017dcb544c2b5c4405a9cd187c0aac95 and gnome-3-18 as commit 66d055a3a111a3fab8723e663206f46ee1875055.