Make the Support link in detail view clickable

Allow users to click the Support link directly to visit it.

https://bugzilla.gnome.org/show_bug.cgi?id=756575